<resources>
    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta com este e-mail</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_user_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!--Status-->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="hint_edit_password">Digite sua senha</string>
    <!--Generics-->
    <string name="error_generic">Ocorreu um erro! Por favor tente novamente mais tarde.</string>
    <string name="text_title_warning">Atenção</string>
    <string name="text_name">Vitória Teodoro Nunes</string>
    <string name="text_button_warning">Entendi</string>
    <string name="password_empty">Preencha a senha!</string>
    <string name="password_text">Senha!</string>
    <string name="email_empty">Preencha seu email!</string>
    <string name="email_text">E-mail</string>
    <string name="description_logout">Logout</string>
    <string name="content_description_tabs">Tabs</string>
    <string name="text_list_task_load">Aguarde, estamos carregando as informações!</string>
    <string name="tex_add_task">Add task</string>
    <string name="text_delete_sucess_task">Deletado com sucesso!</string>


    <!--Login Fragment-->
    <string name="text_title_login_fragment">Login</string>
    <string name="text_button_register_login_fragment">Criar conta</string>
    <string name="text_button_recover_login_fragment">Recuperar conta</string>

    <!--Register Fragment-->
    <string name="password_empty_register_fragment">Preencha uma senha!</string>
    <string name="email_empty_register_fragment">Preencha um e-mail válido!</string>
    <string name="text_button_register_fragment">Enviar</string>
    <string name="text_title_toolbar_register_fragment">Criar conta</string>

    <!--Recover Account Fragment-->
    <string name="text_email_recover_account_fragment">Um e-mail foi enviado para sua caixa de entrada com o login</string>
    <string name="text_info_recover_account_fragment">Informe seu email de cadastro para receber \n um link para alteração de senha.</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_recover_account_fragment">Enviar</string>

    <!--Form Task Fragment-->
    <string name="text_list_task_empty">Nenhuma tarefa cadastrada!</string>
    <string name="hint_new_task_empty_form_task_fragment">Informe sua nova tarefa</string>
    <string name="new_task_empty_form_task_fragment">Nova tarefa</string>
    <string name="view_status_empty_form_task_fragment">Status</string>
    <string name="text_button_empty_form_task_fragment">Salvar</string>

    <!--Form Task-->
    <string name="description_empty_form_task_fragment">Preencha uma descrição!</string>
    <string name="text_save_sucess_form_task_fragment">Tarefa salva com sucesso!</string>
    <string name="text_toolbar_update_form_task_fragment">Editando tarefa...</string>
    <string name="text_update_sucess_form_task_fragment">Tarefa atualizada com sucesso!</string>

    <!--I don't know where is it (pag 129 kanban)-->
    <string name="text_title_dialog_delete">Excluir tarefa</string>
    <string name="text_message_dialog_delete">Tem certeza que deseja excluir a ação não pode ser desfeita?</string>
    <string name="text_button_dialog_confirm">Confirmar</string>




</resources>