<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FormTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/textToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_task_empty_form_task_fragment"
                android:textColor="@color/white" />

        </com.google.android.material.appbar.MaterialToolbar>

        <!-- Conteúdo do formulário -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_empty_form_task_fragment"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextDescricao"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_new_task_empty_form_task_fragment" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/view_status_empty_form_task_fragment"
                android:textColor="@color/white" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbTodo"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:text="@string/status_task_todo"
                    android:textColor="@color/white"
                    android:theme="@style/MyRadioButton" />

                <RadioButton
                    android:id="@+id/rbDoing"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:text="@string/status_task_doing"
                    android:textColor="@color/white"
                    android:theme="@style/MyRadioButton" />

                <RadioButton
                    android:id="@+id/rbDone"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/status_task_done"
                    android:textColor="@color/white"
                    android:theme="@style/MyRadioButton" />

            </RadioGroup>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn"
                app:backgroundTint="@null"
                android:text="@string/text_button_empty_form_task_fragment"
                android:textAllCaps="false"
                android:textColor="@color/color_default" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/white"
                android:visibility="invisible"
                tools:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>