<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/color_default"
    tools:context=".ui.auth.RecoverAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LinearLayout1" >
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_toolbar_recover_account_fragment"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.appbar.MaterialToolbar>
        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:id="@+id/textviewMessage"
                android:text="@string/text_info_recover_account_fragment"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_edit_email"
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_edit_text"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEnviar"
                android:textSize="18dp"
                android:text="@string/text_button_recover_account_fragment"
                style="@style/ButtonTheme"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                tools:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>